Properly append the message to the message box

--- a/tercel/res/tab.html
+++ b/tercel/res/tab.html
@@ -25,7 +25,7 @@ function newMessage(date, sender, content, from) {
 	messageSpan.appendChild(text);
 	message.appendChild(messageSpan);
 	
-	return message;
+	document.getElementById("tercel-message-box").appendChild(message);
 }
 </script>
 <style type="text/css">
